demo/src/main/java/com/example/demo/web/error/NotFoundException.java
package com.example.demo.web.error;

public class NotFoundException {
}
